# SimpleDataBaseManagementSystem

./: Application.cpp  AuthorData.cpp  AuthorHeader.cpp  BookData.cpp  CMakeLists.txt  FileError.cpp  NEW_authorData.cpp  README.md  main.cpp  queryProcessing.cpp  requiredFunctions
Author/: Author.cpp  AuthorData.cpp  AuthorDataFile.cpp  AuthorHeader.cpp  AuthorPrimaryIndex.cpp  AuthorSecondaryIndex.cpp  AuthorSecondaryIndexName.cpp
Book/: Book.cpp  BookData.cpp  BookDataFile.cpp  BookHeader.cpp  BookPrimaryIndex.cpp  BookSecondaryIndex.cpp
Indexes/: AuthorPrimaryIndex.cpp  Index.cpp
