cmake_minimum_required(VERSION 3.21)
project(SimpleDataBaseManagementSystem_)

set(CMAKE_CXX_STANDARD 14)

add_executable(SimpleDataBaseManagementSystem_ main.cpp
        Author/AuthorData.cpp
        Author/AuthorData.cpp
        Book/BookData.cpp
        Book/BookDataFile.cpp
        Book/BookHeader.cpp
        Book/BookPrimaryIndex.cpp
        Book/BookPrimaryIndex.cpp
        Book/BookPrimaryIndex.cpp
        Book/BookPrimaryIndex.cpp
        Author/AuthorSecondaryIndex.cpp)
